--- a/public/About.html
+++ b/public/About.html
@@ -6,8 +6,12 @@
     <title>Resume|About</title>
 </head>
 <body>
-    <p>Third-year CIS Engineering student at NED University with a passion for web development and Data Science. Finished web development internship at Codsoft  to further enhance my expertise. Excited to embark on a promising career in web development and make a meaningful impact in the digital world.
-    As an active member of the AI Club since 2022, I've contributed as a management team member for AI Fest 4.0 and honed my developing skills through competitions at Envision 2022.I've also completed Data science internship at NCL-NED.
+    <h3>ABOUT ME</h3>
+    <p>Third-year CIS Engineering student at NED University with a passion for web development and Data Science.
+    Finished web development internship at Codsoft  to further enhance my expertise.
+    Excited to embark on a promising career in web development and make a meaningful impact in the digital world.
+    As an active member of the AI Club since 2022, I've contributed as a management team member for AI Fest 4.0 
+    and honed my developing skills through competitions at Envision 2022.I've also completed Data science internship at NCL-NED.
     Let's connect and explore opportunities together! </p>
 </body>
 </html>
