--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <h3>OTHER</h3>
     <ul>
         <li><a href="./public/contact.html">Contact</a></li>
-        <li><a href="./public/about.html">About Me</a></li>
+        <li><a href="./public/About.html">About Me</a></li>
     </ul>
     <hr/>
     <footer>
